--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-build
+# general things to ignore
+build/
+dist/
+*.whl
+*.egg-info/
+*.egg
+*.py[cod]
+__pycache__/
+*.so
+*~
+
+.DS_Store
+
+# due to using tox and pytest
+.tox
+.cache
+
+Pipfile
+Pipfile.lock
+
+
 session.vim
 Makefile
 *.make
