--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ contourpy==1.0.7
 cycler==0.11.0
 DNAconvert==0.2.0
 et-xmlfile==1.1.0
+exceptiongroup==1.1.1
 fonttools==4.39.4
+iniconfig==2.0.0
 itaxotools-common==0.3.dev0
 kiwisolver==1.4.4
 lxml==4.9.2
@@ -24,8 +26,10 @@ packaging==23.1
 pandas==2.0.1
 Pillow==9.5.0
 pip==23.0.1
+pluggy==1.0.0
 pylatexenc==2.10
 pyparsing==3.0.9
+pytest==7.3.1
 python-dateutil==2.8.2
 python-nexus==2.9.0
 pytz==2023.3
@@ -37,5 +41,6 @@ spart-parser==0.1.1
 tabulate==0.9.0
 taxi2==2.1.dev1
 termcolor==2.3.0
+tomli==2.0.1
 tzdata==2023.3
 wheel==0.40.0
