--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,28 @@
 alfpy==1.0.6
 appdirs==1.4.4
 attrs==23.1.0
+autoflake==2.2.1
 biopython==1.81
 clldutils==3.19.0
 colorama==0.4.6
 colorlog==6.7.0
 contourpy==1.0.7
+convphase==0.0.1
 cycler==0.11.0
 DNAconvert==0.2.0
 et-xmlfile==1.1.0
 exceptiongroup==1.1.1
+flake8==6.0.0
 fonttools==4.39.4
 iniconfig==2.0.0
-itaxotools-common==0.3.dev0
+isort==5.12.0
+itaxotools-common==0.3.0
 kiwisolver==1.4.4
 lxml==4.9.2
 Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.7.1
+mccabe==0.7.0
 networkx==3.1
 newick==1.9.0
 numpy==1.24.3
@@ -27,6 +32,8 @@ pandas==2.0.1
 Pillow==9.5.0
 pip==23.0.1
 pluggy==1.0.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
 pylatexenc==2.10
 pyparsing==3.0.9
 pytest==7.3.1
@@ -39,7 +46,7 @@ setuptools==67.6.1
 six==1.16.0
 spart-parser==0.1.1
 tabulate==0.9.0
-taxi2==2.1.dev1
+taxi2==2.1.1
 termcolor==2.3.0
 tomli==2.0.1
 tzdata==2023.3
