--- a/requirements.txt
+++ b/requirements.txt
@@ -3,51 +3,48 @@ appdirs==1.4.4
 attrs==23.1.0
 autoflake==2.2.1
 biopython==1.81
-clldutils==3.19.0
+clldutils==3.20.0
 colorama==0.4.6
 colorlog==6.7.0
-contourpy==1.0.7
-convphase==0.0.1
-cycler==0.11.0
+contourpy==1.2.0
+cycler==0.12.1
 DNAconvert==0.2.0
 et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-flake8==6.0.0
-fonttools==4.39.4
+flake8==6.1.0
+fonttools==4.44.0
 iniconfig==2.0.0
 isort==5.12.0
-itaxotools-common==0.3.0
-kiwisolver==1.4.4
-lxml==4.9.2
-Markdown==3.4.3
-MarkupSafe==2.1.2
-matplotlib==3.7.1
+itaxotools-common==0.3.1
+kiwisolver==1.4.5
+lxml==4.9.3
+Markdown==3.5.1
+MarkupSafe==2.1.3
+matplotlib==3.8.1
 mccabe==0.7.0
-networkx==3.1
+networkx==3.2.1
 newick==1.9.0
-numpy==1.24.3
+numpy==1.26.1
 openpyxl==3.1.2
-packaging==23.1
-pandas==2.0.1
-Pillow==9.5.0
-pip==23.0.1
-pluggy==1.0.0
-pycodestyle==2.10.0
-pyflakes==3.0.1
+packaging==23.2
+pandas==2.1.2
+Pillow==10.1.0
+pip==23.2.1
+pluggy==1.3.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
 pylatexenc==2.10
-pyparsing==3.0.9
-pytest==7.3.1
+pyparsing==3.1.1
+pytest==7.4.3
 python-dateutil==2.8.2
 python-nexus==2.9.0
-pytz==2023.3
-scipy==1.10.1
-seaborn==0.12.2
-setuptools==67.6.1
+pytz==2023.3.post1
+scipy==1.11.3
+seaborn==0.13.0
+setuptools==68.2.0
 six==1.16.0
 spart-parser==0.1.1
 tabulate==0.9.0
-taxi2==2.1.1
+taxi2==2.1.2
 termcolor==2.3.0
-tomli==2.0.1
 tzdata==2023.3
-wheel==0.40.0
+wheel==0.41.2
