Build and link phase and seqphase to convphase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15...3.26)
-project(${SKBUILD_PROJECT_NAME} LANGUAGES CXX)
+project(${SKBUILD_PROJECT_NAME} LANGUAGES C CXX)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 include(ExternalProject)
 
@@ -8,6 +8,8 @@ find_package(
     COMPONENTS Interpreter Development.Module
     REQUIRED)
 
+
+# SeqPHASE
 
 ExternalProject_Add(
     SeqPhaseLib
@@ -25,17 +27,51 @@ ExternalProject_Add_Step(
     WORKING_DIRECTORY <SOURCE_DIR>
 )
 
+
+# PHASE
+
+file(GLOB PHASE_SOURCES_CPP ${PROJECT_SOURCE_DIR}/src/phase/src/phase*/*.cpp)
+file(GLOB PHASE_SOURCES_C ${PROJECT_SOURCE_DIR}/src/phase/src/phase*/*.c)
+set(PHASE_SOURCES ${PHASE_SOURCES_CPP} ${PHASE_SOURCES_C})
+
+file(GLOB PHASE_INCLUDE_DIRS
+    ${PROJECT_SOURCE_DIR}/src/phase/src/phase*
+    ${PROJECT_SOURCE_DIR}/src/itaxotools/_convphase/include
+)
+
+add_library(phase STATIC ${PHASE_SOURCES})
+target_include_directories(phase PUBLIC ${PHASE_INCLUDE_DIRS})
+set_property(TARGET phase PROPERTY CXX_STANDARD 14)
+
+target_compile_definitions(phase PRIVATE
+    -DCP_PHASE_LIB
+    -DCP_PHASE_NOFILE
+    -DCP_PHASE_DISABLE_COUT
+    -DCP_PHASE_DISABLE_CERR
+)
+
+
+# ConvPhase
+
 file(GLOB PYMODULE_SOURCES
-    ${PROJECT_SOURCE_DIR}/src/itaxotools/_example/src/*.cpp
+    ${PROJECT_SOURCE_DIR}/src/itaxotools/_convphase/src/*.cpp
 )
 set(PYMODULE_INCLUDE_DIRS
-    ${PROJECT_SOURCE_DIR}/src/itaxotools/_example/include
+    ${PROJECT_SOURCE_DIR}/src/itaxotools/_convphase/include
+    ${CMAKE_BINARY_DIR}/seqphase/src/SeqPhaseLib-build/include
+    C:\\HaxeToolkit\\haxe\\lib\\hxcpp/4,3,2/include
 )
 
 python_add_library(_convphase MODULE ${PYMODULE_SOURCES} WITH_SOABI)
 target_include_directories(_convphase PRIVATE ${PYMODULE_INCLUDE_DIRS})
 add_dependencies(_convphase SeqPhaseLib)
 target_link_directories(_convphase PRIVATE ${CMAKE_BINARY_DIR}/seqphase/src/SeqPhaseLib-build)
-target_link_libraries(_convphase PRIVATE seqphase)
+target_link_libraries(_convphase PRIVATE seqphase phase)
+set_property(TARGET phase PROPERTY CXX_STANDARD 14)
+target_compile_definitions(_convphase PRIVATE
+    -DHX_WINDOWS
+    -DHXCPP_M64
+)
+
 
 install(TARGETS _convphase DESTINATION itaxotools)
