--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,6 @@ __pycache__/
 *~
 
 .DS_Store
-
-# due to using tox and pytest
 .tox
 .cache
 .vscode
@@ -19,13 +17,11 @@ __pycache__/
 Pipfile
 Pipfile.lock
 
+.pytest_cache
+.ruff_cache
 
 session.vim
 Makefile
 *.make
 .vs
 *.sln
-
-libseqphase.a
-
-/phase.*
