--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test-latest:
-    name: Test on ${{ matrix.os }}
+    name: Test latest on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -44,13 +44,13 @@ jobs:
 
 
   test-frozen:
-    name: Test on ${{ matrix.os }}
+    name: Test frozen on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-20.04, windows-2019, macos-11]
 
     steps:
       - name: Checkout
