--- a/.github/actions/python-latest/action.yaml
+++ b/.github/actions/python-latest/action.yaml
@@ -16,5 +16,5 @@ runs:
       shell: bash
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-github.txt
+        pip install -r requirements-live.txt
         pip install .
