--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -31,12 +31,10 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.2
         env:
-          CIBW_BUILD_VERBOSITY: 1
-          CIBW_BEFORE_ALL_LINUX: "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"
-          CIBW_BEFORE_TEST: "pip install -r requirements-live.txt"
-          CIBW_ENVIRONMENT: 'PATH="$PATH:$HOME/.cargo/bin"'
+          CIBW_BUILD_VERBOSITY: 3
+          CIBW_BEFORE_TEST: "pip install -r requirements.txt && pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt"
           CIBW_SKIP: "*-win32"
-          CIBW_ARCHS_MACOS: x86_64 universal2 arm64
+          CIBW_ARCHS_MACOS: x86_64 arm64
 
       - name: Upload wheel artifacts
         uses: actions/upload-artifact@v3
