--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           CIBW_BUILD_VERBOSITY: 3
           CIBW_BEFORE_TEST: "pip install -r requirements.txt && pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt"
-          CIBW_SKIP: "*-win32"
+          CIBW_SKIP: "pp* *-win32"
           CIBW_ARCHS_MACOS: x86_64 arm64
 
       - name: Upload wheel artifacts
