--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -32,8 +32,10 @@ jobs:
         uses: pypa/cibuildwheel@v2.16.2
         env:
           CIBW_BUILD_VERBOSITY: 3
-          CIBW_BEFORE_BUILD_LINUX: apt-get install haxe -y && haxelib install hxcpp 4.3.2
-          CIBW_BEFORE_TEST: pip install -r requirements.txt && pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt
+          CIBW_BEFORE_BUILD_LINUX: yum install haxe -y && haxelib install hxcpp 4.3.2
+          CIBW_BEFORE_TEST: >
+            pip install -r requirements.txt &&
+            pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt
           CIBW_SKIP: "pp* *-win32"
           CIBW_ARCHS_MACOS: x86_64 arm64
 
