--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -32,7 +32,11 @@ jobs:
         uses: pypa/cibuildwheel@v2.16.2
         env:
           CIBW_BUILD_VERBOSITY: 3
-          CIBW_BEFORE_BUILD_LINUX: yum install haxe -y && haxelib install hxcpp 4.3.2
+          CIBW_BEFORE_BUILD_LINUX: >
+            dnf install haxe -y &&
+            mkdir ~/haxelib &&
+            haxelib setup ~/haxelib &&
+            haxelib install hxcpp 4.3.2
           CIBW_BEFORE_TEST: >
             pip install -r requirements.txt &&
             pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt
