--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -33,10 +33,7 @@ jobs:
         env:
           CIBW_BUILD_VERBOSITY: 3
           CIBW_BEFORE_BUILD_LINUX: >
-            yum install haxe-4.3.2-1 -y &&
-            mkdir ~/haxelib &&
-            haxelib setup ~/haxelib &&
-            haxelib install hxcpp 4.3.2
+            bash scripts/install-haxe.sh
           CIBW_BEFORE_TEST: >
             pip install -r requirements.txt &&
             pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt
