--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,15 +19,9 @@ jobs:
           submodules: true
           fetch-depth: 0
 
-      - uses: krdlab/setup-haxe@v1
-        with:
-          haxe-version: 4.3.2
-
-      - name: Install hxcpp
+      - name: Set up haxe
+        uses: ./.github/actions/setup-haxe
         if: runner.os != 'Linux'
-        run: |
-          haxe -version
-          haxelib install hxcpp
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.2
@@ -42,7 +36,7 @@ jobs:
           CIBW_BEFORE_TEST: >
             pip install -r requirements.txt &&
             pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt
-          CIBW_SKIP: "pp* *-win32 *-i686"
+          CIBW_SKIP: "pp* *-win32 *-manylinux_i686 *-musllinux_i686"
           CIBW_ARCHS_MACOS: "auto64 arm64"
 
       - name: Upload wheel artifacts
@@ -55,7 +49,6 @@ jobs:
   build-sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
-    if: false
 
     steps:
       - uses: actions/checkout@v4
