--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -36,7 +36,7 @@ jobs:
           CIBW_BEFORE_TEST: >
             pip install -r requirements.txt &&
             pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt
-          CIBW_SKIP: "pp* *-win32 *-manylinux_i686 *-musllinux_i686"
+          CIBW_SKIP: "pp* *-win32 *-manylinux_i686 *-musllinux_*"
           CIBW_ARCHS_MACOS: "auto64 arm64"
 
       - name: Upload wheel artifacts
