--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -46,6 +46,37 @@ jobs:
           path: ./wheelhouse/*.whl
 
 
+  fuse-wheels:
+    name: Fuse macOS wheels
+    runs-on: ubuntu-latest
+    needs: build-wheels
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: python-package-distributions
+          path: wheelhouse
+
+      - name: Create universal2 wheels
+        run: >-
+          pip install delocate
+          python scripts/fuse-wheels.py
+
+      - name: Upload universal2 wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/*universal2.whl
+
+
   build-sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
