--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -66,7 +66,7 @@ jobs:
           path: wheelhouse
 
       - name: Create universal2 wheels
-        run: >-
+        run: |
           pip install delocate
           python scripts/fuse-wheels.py
 
