Fuse wheels on macos runner

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -48,7 +48,7 @@ jobs:
 
   fuse-wheels:
     name: Fuse macOS wheels
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: build-wheels
 
     steps:
