--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -7,7 +7,6 @@ jobs:
   build-wheels:
     name: Build wheels for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -75,7 +74,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: python-package-distributions
-          path: dist/*universal2.whl
+          path: wheelhouse/*universal2.whl
 
 
   build-sdist:
