--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alfpy==1.0.6
+attrs==23.1.0
 bashlex==0.18
+bindepend==0.1
 biopython==1.81
 bracex==2.4
 certifi==2023.11.17
@@ -11,32 +13,36 @@ cycler==0.12.1
 delocate==0.10.6
 distlib==0.3.7
 et-xmlfile==1.1.0
-exceptiongroup==1.2.0
 filelock==3.13.1
 fonttools==4.46.0
-identify==2.5.32
+identify==2.5.33
 iniconfig==2.0.0
+itaxotools-calculate-distances==0.1.1
+itaxotools-common==0.3.3
+itaxotools-spart-parser==0.1.3
+itaxotools-taxi2==2.2.0
 kiwisolver==1.4.5
+machomachomangler==0.0.1
 matplotlib==3.8.2
 nodeenv==1.8.0
 numpy==1.26.2
 openpyxl==3.1.2
 packaging==23.2
-pandas==2.1.3
+pandas==2.1.4
+pefile==2023.2.7
 Pillow==10.1.0
 platformdirs==4.1.0
 pluggy==1.3.0
-pre-commit==3.5.0
+pre-commit==3.6.0
 pyparsing==3.1.1
 pytest==7.4.3
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
-ruff==0.1.6
+ruff==0.1.7
 seaborn==0.13.0
 setuptools-scm==8.0.4
 six==1.16.0
-tomli==2.0.1
-typing_extensions==4.8.0
+typing_extensions==4.9.0
 tzdata==2023.3
 virtualenv==20.25.0
