Throw cmake error if building universal2 directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,19 +44,17 @@ else()
     endif()
 endif()
 
-message(oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo)
-message(oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo)
-message(oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo)
-message(CMAKE_SYSTEM_PROCESSOR:  ${CMAKE_SYSTEM_PROCESSOR})
-message(ARCHFLAGS:  "$ENV{ARCHFLAGS}")
-message(IS_ARM64:  ${IS_ARM64})
-message(IS_M64:  ${IS_M64})
-message(IS_M32:  ${IS_M32})
-message(IS_UNIVERSAL:  ${IS_UNIVERSAL})
-message(oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo)
-message(oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo)
-message(oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo)
+message("CMake environment variables:")
+message("CMAKE_SYSTEM_PROCESSOR: " ${CMAKE_SYSTEM_PROCESSOR})
+message("ARCHFLAGS: " "$ENV{ARCHFLAGS}")
+message("IS_ARM64: " ${IS_ARM64})
+message("IS_M64: " ${IS_M64})
+message("IS_M32: " ${IS_M32})
+message("IS_UNIVERSAL: " ${IS_UNIVERSAL})
 
+if(IS_UNIVERSAL)
+    message(FATAL_ERROR "Cannot generate universal2 library directly, use delocate-fuse")
+endif()
 
 # SeqPHASE
 
