--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - 'v*'
 
+env:
+  PROJECT_NAME: itaxotools-convphase
+  ARTIFACT_DISTRIBUTIONS: itaxotools-convphase-distributions
+
+
 jobs:
 
   build-wheels:
@@ -36,16 +41,13 @@ jobs:
             PATH=/opt/haxe:/opt/neko:$PATH
             LD_LIBRARY_PATH=/opt/neko:$LD_LIBRARY_PATH
             NEKOPATH=/opt/neko
-          CIBW_BEFORE_TEST: >
-            pip install -r requirements.txt &&
-            pip install -i https://test.pypi.org/simple/ -r requirements-testpypi.txt
           CIBW_SKIP: "pp* *-win32 *-manylinux_i686 *-musllinux_*"
           CIBW_ARCHS_MACOS: "auto64 arm64"
 
       - name: Upload wheel artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: python-package-distributions
+          name: ${{ env.ARTIFACT_DISTRIBUTIONS }}
           path: ./wheelhouse/*.whl
 
 
@@ -65,7 +67,7 @@ jobs:
       - name: Download all the dists
         uses: actions/download-artifact@v3
         with:
-          name: python-package-distributions
+          name: ${{ env.ARTIFACT_DISTRIBUTIONS }}
           path: wheelhouse
 
       - name: Create universal2 wheels
@@ -76,7 +78,7 @@ jobs:
       - name: Upload universal2 wheels
         uses: actions/upload-artifact@v3
         with:
-          name: python-package-distributions
+          name: ${{ env.ARTIFACT_DISTRIBUTIONS }}
           path: wheelhouse/*universal2.whl
 
 
@@ -101,14 +103,10 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Install Python dependencies
+      - name: Install source distribution
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -vvv -i https://test.pypi.org/simple -r requirements-testpypi.txt
-
-      - name: Install source distribution
-        run: pip install dist/*.tar.gz
+          pip install dist/*.tar.gz
 
       - name: Test with pytest
         run: |
@@ -117,20 +115,21 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: python-package-distributions
+          name: ${{ env.ARTIFACT_DISTRIBUTIONS }}
           path: dist/*.tar.gz
+
 
   publish-to-testpypi:
     name: Publish to TestPyPI
     runs-on: ubuntu-latest
     needs:
-      - build-sdist
       - build-wheels
+      - build-sdist
       - fuse-wheels
 
     environment:
         name: testpypi
-        url: https://test.pypi.org/p/itaxotools-convphase/
+        url: https://test.pypi.org/p/${{ env.PROJECT_NAME }}
 
     permissions:
       id-token: write
@@ -139,12 +138,37 @@ jobs:
       - name: Download all the dists
         uses: actions/download-artifact@v3
         with:
-          name: python-package-distributions
+          name: ${{ env.ARTIFACT_DISTRIBUTIONS }}
           path: dist
 
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
+          skip-existing: true
+
+
+  publish-to-pypi:
+    name: Publish to PyPI
+    runs-on: ubuntu-latest
+    needs:
+      - publish-to-testpypi
+
+    environment:
+      name: pypi
+      url: https://pypi.org/p/${{ env.PROJECT_NAME }}
+
+    permissions:
+      id-token: write
+
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.ARTIFACT_DISTRIBUTIONS }}
+          path: dist
+
+      - uses: pypa/gh-action-pypi-publish@release/v1
+        with:
           skip-existing: true
 
 
@@ -166,7 +190,7 @@ jobs:
       - name: Download all the dists
         uses: actions/download-artifact@v3
         with:
-          name: python-package-distributions
+          name: ${{ env.ARTIFACT_DISTRIBUTIONS }}
           path: dist/
 
       - name: Create GitHub Release
